changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

==============================================================================
Changes for 1.70.0
==============================================================================

Hack to make the server work on FreeBSD 9.
Nicolas Weeger 2012-02-07

Make artifacts hide their properties when not identified.
Nicolas Weeger 2012-01-28

Do not fail build when not building in a working copy.
Andreas Kirschbaum 2012-01-19

Implement feature request #1676810: Throw specific items.
Throwing will now use marked item, or items in a 'quiver of throwing items'.
Nicolas Weeger 2011-12-30

Improve 'probe' spell. Over level 15, a status bar is displayed over the target.
Duration and precision are based on the level.
Requires arch revision 16342 or higher.
Nicolas Weeger 2011-12-28

Fix bug #3440456: Animated bolts.
Adjust animate_object() to correctly handle FLAG_IS_TURNABLE,
and make object_update_turn_face() a mere wrapper to that function.
Nicolas Weeger 2011-12-18

Add logic to do svn version check between plugin and server - this prevents
incompatible plugins from being used.
MSW 2011-11-26

New server argument: -disable-plugin.
Disables a plugin from its name, 'All' to disable all.
Nicolas Weeger 2011-11-20

New server setting: "special_break_map".
Controls whether submaps in random maps can break the walls to be placed.
On (can break) by default for historical reasons.
Nicolas Weeger 2011-11-20

Rewrite the i18n system. This makes it easier to use strings in the code,
instead of arbitrary identifiers.
Nicolas Weeger 2011-11-12

Improve artifact support.