@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Apply patch #3532595: Restrict account creation, by Eddward DeVilla.
+Nicolas Weeger 2012-06-10
+
 ==============================================================================
 Changes for 1.70.0
 ==============================================================================
